--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
     <div class="form-group">
       <label class="form-control-label">Profissão</label>
-      <select class="form-control" name="profissao" ngModel>
+      <select class="form-control" name="profissao" [ngModel]="profissao">
         <option value="">Selecione</option> <!-- Usando um laço FOR para o ver o array profissoes[] -->
         <option *ngFor="let profissao of profissoes"
           [value]="profissao">{{ profissao }}</option>
