--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,25 @@
 <div class="container">
 
+  {{ cliente | json }}
+
   <!-- #usuarioForm variavel para o template-->
   <form #usuarioForm="ngForm" (ngSubmit)="salvar(usuarioForm)">
     <div class="form-group">
       <label class="form-control-label">Nome</label>
-      <input type="text" class="form-control" name="nome" ngModel>
+      <input type="text" class="form-control" name="primeiroNome"
+        [(ngModel)]="cliente.nome">
     </div>
 
     <div class="form-group">
       <label class="form-control-label">E-mail</label>
-      <input type="text" class="form-control" name="email" ngModel>
+      <input type="text" class="form-control" name="emailAddress"
+        [(ngModel)]="cliente.email">
     </div>
 
     <div class="form-group">
       <label class="form-control-label">Profissão</label>
-      <select class="form-control" name="profissao" [ngModel]="profissao">
+      <select class="form-control" name="profissao"
+          [(ngModel)]="cliente.profissao">
         <option value="">Selecione</option> <!-- Usando um laço FOR para o ver o array profissoes[] -->
         <option *ngFor="let profissao of profissoes"
           [value]="profissao">{{ profissao }}</option>
