Estilizando os campos inválidos com Bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,36 +9,44 @@
     <div class="form-group">
       <label class="form-control-label">Nome</label>
       <input type="text" class="form-control" name="primeiroNome"
-        [(ngModel)]="cliente.nome" required minlength="10" #nome="ngModel">
+        [(ngModel)]="cliente.nome" required minlength="10" #nome="ngModel"
+        [class.is-invalid]="nome.invalid && nome.touched"> <!-- Condição -->
 
         <!-- Touched: {{ nome.touched }}<br>  Se você TOCAR em um campo uma vez, fica TRUE -->
         <!-- Pristine: {{ nome.pristine }} <br> Contrario de DIRTY, Se nunca foi alterado, fica TRUE -->
         <!-- Dirty: {{ nome.dirty }}  Se você escrever alguma coisa no campo, ele fica true-->
 
-      <div *ngIf="nome.hasError('required') && nome.touched">Informe um nome</div>
-      <div *ngIf="nome.hasError('minlength') && nome.touched">O nome deve ser completo</div>
-    </div> <!-- REQUIRED - Para ser um campo obrigatorio -->
+        <div *ngIf="nome.hasError('required') && nome.touched"
+        class="invalid-feedback">Informe um nome</div>
+        <div *ngIf="nome.hasError('minlength') && nome.touched"
+        class="invalid-feedback">O nome deve ser completo</div>
+      </div> <!-- REQUIRED - Para ser um campo obrigatorio -->
            <!-- MINLENGHT - Minimo 10 letras -->
+           <!-- INVALID-FEEDBACK marca a borda com vermelho, usando BOOTSTRAP -->
 
     <div class="form-group">
       <label class="form-control-label">E-mail</label>
       <input type="text" class="form-control" name="emailAddress"
-        [(ngModel)]="cliente.email" required email #email="ngModel">
+        [(ngModel)]="cliente.email" required email #email="ngModel"
+        [class.is-invalid]="email.invalid && email.touched">
 
-      <div *ngIf="email.invalid && email.touched">Informe um e-mail válido</div>
+        <div *ngIf="email.invalid && email.touched"
+        class="invalid-feedback">Informe um e-mail válido</div>
     </div><!-- REQUIRED - Para ser um campo obrigatorio -->
           <!-- EMAIL - Configuração para o email, ter @ por exemplo -->
 
     <div class="form-group">
       <label class="form-control-label">Profissão</label>
       <select class="form-control" name="profissao"
-          [(ngModel)]="cliente.profissao" required #profissao="ngModel">
+          [(ngModel)]="cliente.profissao" required #profissao="ngModel"
+          [class.is-invalid]="profissao.invalid && profissao.touched">
         <option value="">Selecione</option> <!-- Usando um laço FOR para o ver o array profissoes[] -->
         <option *ngFor="let profissao of profissoes"
           [value]="profissao">{{ profissao }}</option>
       </select>
 
-      <div *ngIf="profissao.invalid && profissao.touched">Informe uma profissão</div>
+      <div *ngIf="profissao.invalid && profissao.touched"
+        class="invalid-feedback">Informe uma profissão</div>
     </div><!-- REQUIRED - Para ser um campo obrigatorio -->
 
     <button type="submit" class="btn btn-primary"
