--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container">
 
+  {{ cliente | json }} <!-- Para poder ver o que está sendo digitado no Objeto -->
+
   <div *ngIf="usuarioForm.invalid && usuarioForm.dirty" class="alert alert-danger">
     Preencha todos os campos corretamente.
   </div>
